75ML30D - Day 25 - Challenge completion

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -15,7 +15,7 @@
    },
    "source": [
     "# 75ML30D\n",
-    "![96%](https://progress-bar.dev/96?title=progress&width=100)\n",
+    "![100%](https://progress-bar.dev/100?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -23,7 +23,8 @@
     "\n",
     "#### Timelines:\n",
     "- Start Date: 9th Jan 2024\n",
-    "- Challenge End Date: 8th Feb 2024"
+    "- Challenge End Date: 8th Feb 2024\n",
+    "- Completed on: 2nd Feb 2023"
    ]
   },
   {
@@ -5913,20 +5914,165 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70baf749",
+   "cell_type": "markdown",
+   "id": "c58685d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 73. \n",
+    "Date: 02nd Feb 2024<br>\n",
+    "Medium Leetcode: all-paths-from-source-to-target<br>\n",
+    "Solution: https://leetcode.com/problems/all-paths-from-source-to-target/submissions/1163989706/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0712cbb5",
+   "execution_count": 75,
+   "id": "70baf749",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def allPathsSourceTarget(self, graph: List[List[int]]) -> List[List[int]]:\n",
+    "        # Create an adjacency list and use a DFS algorithm to fund all paths\n",
+    "        graph = dict(enumerate(graph))\n",
+    "        target = len(graph) - 1\n",
+    "\n",
+    "        result = []\n",
+    "        def backtrack(path: list[int] = [0]):\n",
+    "            curr = path[-1]\n",
+    "            if curr == target:\n",
+    "                result.append(path)\n",
+    "            else:\n",
+    "                for next_ in graph[curr]:\n",
+    "                    if next_ not in path:\n",
+    "                        backtrack([*path, next_])\n",
+    "        \n",
+    "        backtrack()\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sorted(Solution().allPathsSourceTarget([[1,2],[3],[3],[]])) == sorted([[0,1,3],[0,2,3]])\n",
+    "assert sorted(Solution().allPathsSourceTarget([[4,3,1],[3,2,4],[3],[4],[]])) == sorted([[0,4],[0,3,4],[0,1,3,4],[0,1,2,3,4],[0,1,4]])\n",
+    "assert sorted(Solution().allPathsSourceTarget([[1],[]])) == sorted([[0,1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89278b41",
+   "metadata": {},
+   "source": [
+    "# 74. \n",
+    "Date: 02nd Feb 2024<br>\n",
+    "Medium Leetcode: rearrange-array-elements-by-sign<br>\n",
+    "Solution: https://leetcode.com/problems/rearrange-array-elements-by-sign/submissions/1164036105"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "2cea39d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rearrangeArray(self, nums: List[int]) -> List[int]:\n",
+    "        pos = collections.deque()\n",
+    "        neg = collections.deque()\n",
+    "        for n in nums:\n",
+    "            if n < 0:\n",
+    "                neg.append(n)\n",
+    "            else:\n",
+    "                pos.append(n)\n",
+    "        \n",
+    "        result = []\n",
+    "        while neg:\n",
+    "            result.append(pos.popleft())\n",
+    "            result.append(neg.popleft())\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().rearrangeArray([3,1,-2,-5,2,-4]) == [3,-2,1,-5,2,-4]\n",
+    "assert Solution().rearrangeArray([-1,1]) == [1,-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd6f399",
+   "metadata": {},
+   "source": [
+    "# 75. \n",
+    "Date: 02nd Feb 2024<br>\n",
+    "Medium Leetcode: partition-array-according-to-given-pivot<br>\n",
+    "Solution: https://leetcode.com/problems/partition-array-according-to-given-pivot/submissions/1164120125/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ce06d4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def pivotArray_(self, nums: List[int], pivot: int) -> List[int]:\n",
+    "        \"Time complexity of O(1), space complexity of O(N)\"\n",
+    "        less, equal, greater = [], [], []\n",
+    "        for n in nums:\n",
+    "            if n < pivot:\n",
+    "                less.append(n)\n",
+    "            elif n == pivot:\n",
+    "                equal.append(n)\n",
+    "            else:\n",
+    "                greater.append(n)\n",
+    "\n",
+    "        return less + equal + greater\n",
+    "\n",
+    "    def pivotArray_(self, nums: List[int], pivot: int) -> List[int]:\n",
+    "        \"Using O(1) space complexity, time complexity is O(N ^ 2)\"\n",
+    "\n",
+    "        def shift_right(start, curr):\n",
+    "            'Shift all elements starting at start right and insert curr at start'\n",
+    "            temp = nums[curr]\n",
+    "            while curr > start:\n",
+    "                nums[curr] = nums[curr - 1]\n",
+    "                curr -= 1\n",
+    "            nums[curr] = temp\n",
+    "\n",
+    "        N = len(nums)\n",
+    "        idx = 0\n",
+    "        for i in range(N):\n",
+    "            if nums[i] == pivot:\n",
+    "                shift_right(idx, i)\n",
+    "                idx += 1\n",
+    "\n",
+    "        idx = 0\n",
+    "        for i in range(N):\n",
+    "            if nums[i] < pivot:\n",
+    "                shift_right(idx, i)\n",
+    "                idx += 1\n",
+    "            \n",
+    "        return nums\n",
+    "\n",
+    "    def pivotArray(self, nums: List[int], pivot: int) -> List[int]:\n",
+    "        \"Space complexity is O(1), time complexity is O(N log N)\"\n",
+    "        \n",
+    "        def compare(a):\n",
+    "            if a < pivot:\n",
+    "                return -1\n",
+    "            elif a == pivot:\n",
+    "                return 0\n",
+    "            else:\n",
+    "                return 1\n",
+    "\n",
+    "        nums.sort(key=compare)\n",
+    "        return nums\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().pivotArray([2,4,3,-3], 2) == [-3,2,4,3]\n",
+    "assert Solution().pivotArray([9,12,5,10,14,3,10], 10) == [9,5,3,10,10,12,14]"
+   ]
   }
  ],
  "metadata": {
