--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![2%](https://progress-bar.dev/2?title=progress&width=100)\n",
+    "![4%](https://progress-bar.dev/4?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +213,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. \n",
+    "Date: 09th Feb 2024<br>\n",
+    "Hard Leetcode: minimum-one-bit-operations-to-make-integers-zero<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-one-bit-operations-to-make-integers-zero/submissions/1170668823/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def minimumOneBitOperations__(self, n: int) -> int:\n",
+    "        def changeBit(b: str, idx: int):\n",
+    "            bits_ = list(b)\n",
+    "            curr = bits_[idx]\n",
+    "            curr = str(int(not bool(int(curr))))\n",
+    "            bits_[idx] = curr\n",
+    "            return ''.join(bits_)\n",
+    "        \n",
+    "        def op1(b: str, N: int):\n",
+    "            'Last bit is changed'\n",
+    "            return changeBit(b, N - 1)\n",
+    "\n",
+    "        def op2(b: str, N: int):\n",
+    "            \"\"\"\n",
+    "            Swap ith bit given i-1st bit is 1 and all bits to the right are 0\n",
+    "            \"\"\"\n",
+    "            i = b.rindex('1')\n",
+    "            if i >= 1:\n",
+    "                return changeBit(b, i - 1)\n",
+    "            else:\n",
+    "                return b\n",
+    "\n",
+    "        def backtrack(b: str, processed: set[str] = set()):\n",
+    "            if not int(b):\n",
+    "                return 0\n",
+    "            else:\n",
+    "                op1_result = op1(b, N)\n",
+    "                op2_result = op2(b, N)\n",
+    "                op1_count = op2_count = math.inf\n",
+    "                if op1_result not in processed: \n",
+    "                    op1_count = backtrack(op1_result, {*processed, b})\n",
+    "                if op2_result not in processed: \n",
+    "                    op2_count = backtrack(op2_result, {*processed, b})\n",
+    "\n",
+    "                result = 1 + min(op1_count, op2_count)\n",
+    "                return result\n",
+    "\n",
+    "        bits = bin(n)[2:]\n",
+    "        N = len(bits)\n",
+    "        return backtrack(bits)\n",
+    "\n",
+    "    def minimumOneBitOperations_(self, n: int) -> int:\n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "\n",
+    "        bits = bin(n)[2:]\n",
+    "        bit_length = len(bits)\n",
+    "        maxN = (2 ** bit_length) - 1\n",
+    "        minN = 2 ** (bit_length - 1)\n",
+    "        dp = [_ for _ in range(minN, maxN + 1)]\n",
+    "        \n",
+    "        def splitAndMerge(arr: list[int], rev=False):\n",
+    "            N = len(arr)\n",
+    "            if N == 1:\n",
+    "                return arr\n",
+    "            else:\n",
+    "                mid = N // 2\n",
+    "                left = splitAndMerge(arr[:mid], rev=False)\n",
+    "                right = splitAndMerge(arr[mid:], rev=True)\n",
+    "                return right + left if rev else left + right\n",
+    "\n",
+    "        dp = splitAndMerge(dp, rev=True)\n",
+    "        return dp[n - minN]\n",
+    "\n",
+    "    def minimumOneBitOperations(self, n: int) -> int:\n",
+    "        # https://www.youtube.com/watch?v=yRI18_MaG7k\n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            k = 0\n",
+    "            while 2 ** k <= n:\n",
+    "                k += 1 \n",
+    "            k -= 1\n",
+    "            return 2 ** (k + 1) - 1 - self.minimumOneBitOperations(2 ** k ^ n)\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in range(1, 300):\n",
+    "    assert Solution().minimumOneBitOperations_(_) == Solution().minimumOneBitOperations(_), f\"failed for {_}\""
+   ]
   },
   {
    "cell_type": "code",
