--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![4%](https://progress-bar.dev/4?title=progress&width=100)\n",
+    "![6%](https://progress-bar.dev/6?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +307,351 @@
     "# Testing the solution\n",
     "for _ in range(1, 300):\n",
     "    assert Solution().minimumOneBitOperations_(_) == Solution().minimumOneBitOperations(_), f\"failed for {_}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. \n",
+    "Date: 10th Feb 2024<br>\n",
+    "Hard Leetcode: human-traffic-of-stadium<br>\n",
+    "Solution: https://leetcode.com/problems/human-traffic-of-stadium/submissions/1171130705"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2017-01-06</td>\n",
+       "      <td>1455.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id visit_date  people\n",
+       "0  5.0 2017-01-05   145.0\n",
+       "1  6.0 2017-01-06  1455.0\n",
+       "2  7.0 2017-01-07   199.0\n",
+       "3  8.0 2017-01-09   188.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2017-01-05T00:00:00</td>\n",
+       "      <td>145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2017-01-06T00:00:00</td>\n",
+       "      <td>1455.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2017-01-07T00:00:00</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2017-01-09T00:00:00</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id           visit_date  people\n",
+       "0  5.0  2017-01-05T00:00:00   145.0\n",
+       "1  6.0  2017-01-06T00:00:00  1455.0\n",
+       "2  7.0  2017-01-07T00:00:00   199.0\n",
+       "3  8.0  2017-01-09T00:00:00   188.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2017-01-05T00:00:00</td>\n",
+       "      <td>145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2017-01-06T00:00:00</td>\n",
+       "      <td>1455.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2017-01-07T00:00:00</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2017-01-09T00:00:00</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id           visit_date  people\n",
+       "0  5.0  2017-01-05T00:00:00   145.0\n",
+       "1  6.0  2017-01-06T00:00:00  1455.0\n",
+       "2  7.0  2017-01-07T00:00:00   199.0\n",
+       "3  8.0  2017-01-09T00:00:00   188.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "temp = read_lc_df(\"\"\"\n",
+    "+------+------------+-----------+\n",
+    "| id   | visit_date | people    |\n",
+    "+------+------------+-----------+\n",
+    "| 1    | 2017-01-01 | 10        |\n",
+    "| 2    | 2017-01-02 | 109       |\n",
+    "| 3    | 2017-01-03 | 150       |\n",
+    "| 4    | 2017-01-04 | 99        |\n",
+    "| 5    | 2017-01-05 | 145       |\n",
+    "| 6    | 2017-01-06 | 1455      |\n",
+    "| 7    | 2017-01-07 | 199       |\n",
+    "| 8    | 2017-01-09 | 188       |\n",
+    "+------+------------+-----------+\n",
+    "\"\"\")\n",
+    "\n",
+    "temp['visit_date'] = pd.to_datetime(temp['visit_date'])\n",
+    "\n",
+    "def human_traffic_df(stadium: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = stadium[stadium['people'] >= 100]\n",
+    "    ids = set(df['id'])\n",
+    "    result = []\n",
+    "    for row in df.itertuples():\n",
+    "        row = row[1:]\n",
+    "        curr_id = row[0]\n",
+    "        if curr_id - 1 in ids and curr_id - 2 in ids:\n",
+    "            result.append(row)\n",
+    "        elif curr_id - 1 in ids and curr_id + 1 in ids:\n",
+    "            result.append(row)\n",
+    "        elif curr_id + 1 in ids and curr_id + 2 in ids:\n",
+    "            result.append(row)\n",
+    "\n",
+    "    df = pd.DataFrame.from_records(result, columns=stadium.columns)\n",
+    "    df.columns = stadium.columns\n",
+    "    return df\n",
+    "\n",
+    "# Pandas / python solution\n",
+    "display(human_traffic_df(temp))\n",
+    "\n",
+    "# Write to SQL DB\n",
+    "temp.to_sql(\"temp\", if_exists='replace', con=conn, index=False)\n",
+    "\n",
+    "display(pd.read_sql(\"\"\"\n",
+    "    with cte1 as (\n",
+    "        select *,  id - row_number() over(order by id asc) as rnk\n",
+    "        from temp\n",
+    "        where people >= 100\n",
+    "    ),\n",
+    "\n",
+    "    cte2 as (\n",
+    "        select c.*, count(*) over (partition by rnk) rnk_count from cte1 c order by c.visit_date\n",
+    "    )\n",
+    "\n",
+    "    select c.id, c.visit_date, c.people from cte2 c where c.rnk_count > 2\n",
+    "\"\"\", con=conn))\n",
+    "\n",
+    "display(pd.read_sql(\"\"\"\n",
+    "    with cte1 as (\n",
+    "        select * from temp where people >= 100\n",
+    "    ),\n",
+    "\n",
+    "    cte2 as (\n",
+    "        select \n",
+    "                c.*, \n",
+    "                ifnull(-c.id - 1 + lead(id, 1) over (), 1) = 0 as lead1,\n",
+    "                ifnull(-c.id - 2 + lead(id, 2) over (), 1) = 0 as lead2,\n",
+    "                ifnull(c.id - 1 - lag(id, 1) over (), 1) = 0 as lag1,\n",
+    "                ifnull(c.id - 2 - lag(id, 2) over (), 1) = 0 as lag2\n",
+    "        from cte1 c\n",
+    "    ),\n",
+    "\n",
+    "    cte3 as (\n",
+    "        select \n",
+    "            c.*,  \n",
+    "            (lead1 + lead2 + lag1 + lag2) as filter\n",
+    "        from cte2 c\n",
+    "    )\n",
+    "\n",
+    "    select c.id, c.visit_date, c.people from cte3 c where c.filter >= 2\n",
+    "\"\"\", con=conn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. \n",
+    "Date: 10th Feb 2024<br>\n",
+    "Hard Leetcode: largest-rectangle-in-histogram<br>\n",
+    "Solution: https://leetcode.com/problems/largest-rectangle-in-histogram/submissions/1171340811"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def largestRectangleArea(self, heights: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        For each hist, count the number of adjacent hist less than or equal to itself\n",
+    "        Travel left to right, find the next smallest number, repeat by travelling from left to right\n",
+    "        \"\"\" \n",
+    "        N = len(heights)\n",
+    "        nge_rtl, nge_ltr = [N - 1 for _ in range(N)], [0 for _ in range(N)]\n",
+    "        stack = []\n",
+    "        for i in range(N):\n",
+    "            while stack and heights[stack[-1]] > heights[i]:\n",
+    "                nge_rtl[stack.pop()] = i - 1\n",
+    "            stack.append(i)\n",
+    "        \n",
+    "        stack = []\n",
+    "        for i in range(N - 1, -1, -1):\n",
+    "            while stack and heights[stack[-1]] > heights[i]:\n",
+    "                nge_ltr[stack.pop()] = i + 1\n",
+    "            stack.append(i)\n",
+    "\n",
+    "        maxArea = -math.inf\n",
+    "        for i in range(N):\n",
+    "            curr = heights[i]\n",
+    "            curr = (nge_rtl[i] - nge_ltr[i] + 1) * curr\n",
+    "            maxArea = max(maxArea, curr)\n",
+    "\n",
+    "        return maxArea\n",
+    "\n",
+    "# Testingt the soltuion\n",
+    "assert Solution().largestRectangleArea([2, 1, 5, 6, 2, 3]) == 10\n",
+    "assert Solution().largestRectangleArea([2,4]) == 4"
    ]
   },
   {
