--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![6%](https://progress-bar.dev/6?title=progress&width=100)\n",
+    "![12%](https://progress-bar.dev/12?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,6 +653,136 @@
     "assert Solution().largestRectangleArea([2, 1, 5, 6, 2, 3]) == 10\n",
     "assert Solution().largestRectangleArea([2,4]) == 4"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. \n",
+    "Date: 11th Feb 2024<br>\n",
+    "Hard Leetcode: cherry-pickup-II<br>\n",
+    "Solution: https://leetcode.com/problems/cherry-pickup-ii/submissions/1172053835/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def cherryPickup(self, grid: List[List[int]]) -> int:\n",
+    "        M = len(grid)\n",
+    "        N = len(grid[0])\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def backtrack(i: int, r1: int, r2: int) -> int:\n",
+    "            if 0 <= r1 < N and 0 <= r2 < N and r1 != r2:\n",
+    "                curr = grid[i][r1] + grid[i][r2]\n",
+    "                if i == M - 1:\n",
+    "                    return curr\n",
+    "                else:\n",
+    "                    return curr + max(\n",
+    "                        backtrack(i + 1, r1 - 1, r2 - 1),\n",
+    "                        backtrack(i + 1, r1 - 1, r2),\n",
+    "                        backtrack(i + 1, r1 - 1, r2 + 1),\n",
+    "                        backtrack(i + 1, r1, r2 - 1),\n",
+    "                        backtrack(i + 1, r1, r2),\n",
+    "                        backtrack(i + 1, r1, r2 + 1),\n",
+    "                        backtrack(i + 1, r1 + 1, r2 - 1),\n",
+    "                        backtrack(i + 1, r1 + 1, r2),\n",
+    "                        backtrack(i + 1, r1 + 1, r2 + 1),\n",
+    "                    )\n",
+    "            else:\n",
+    "                return -math.inf\n",
+    "\n",
+    "        result = backtrack(0, 0, N - 1)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().cherryPickup([[3,1,1],[2,5,1],[1,5,5],[2,1,1]]) == 24\n",
+    "assert Solution().cherryPickup([[1,0,0,0,0,0,1],[2,0,0,0,0,3,0],[2,0,9,0,0,0,0],[0,3,0,5,4,0,0],[1,0,2,3,0,0,6]]) == 28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. \n",
+    "Date: 11th Feb 2024<br>\n",
+    "Hard Leetcode: candy<br>\n",
+    "Solution: https://leetcode.com/problems/candy/submissions/1172096247"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def candy(self, ratings: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        Initially all positions are Unknown\n",
+    "        Start with the lowest rated indices all the way till the highest rated indices\n",
+    "\n",
+    "        1. Both neighbours are unknown - assign the student with 1 child\n",
+    "        2. One neighbour is known - increment neighbour + 1\n",
+    "        3. Both neighbours are known - max(left_neighbour, right_neighbour) + 1\n",
+    "\n",
+    "        [2, 2, 0, 3, 1, 0]\n",
+    "\n",
+    "        [_, _, _, _, _, _]\n",
+    "        [_, _, 1, _, _, 1]\n",
+    "        [_, _, 1, _, 2, 1]\n",
+    "        [1, 2, 1, _, 2, 1]\n",
+    "        [1, 2, 1, 3, 2, 1]\n",
+    "\n",
+    "        sum([1, 2, 1, 3, 2, 1]) => 10\n",
+    "        \"\"\"\n",
+    "\n",
+    "        N = len(ratings)\n",
+    "        indices = dict()\n",
+    "        for i in range(N):\n",
+    "            curr = indices.get(ratings[i], [])\n",
+    "            curr.append(i)\n",
+    "            indices[ratings[i]] = curr\n",
+    "\n",
+    "        if N == 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            dp = [0 for _ in range(N)]\n",
+    "            for key in sorted(indices.keys()):\n",
+    "                curr = [*dp]\n",
+    "                for idx in indices[key]:\n",
+    "                    dp[idx] = 1 + max(curr[idx - 1] if idx > 0 else -math.inf, curr[idx + 1] if idx < N - 1 else -math.inf)\n",
+    "            return sum(dp)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().candy([1,0,2]) == 5\n",
+    "assert Solution().candy([0]) == 1\n",
+    "assert Solution().candy([1,2,2]) == 4\n",
+    "assert Solution().candy([1,2,3,3]) == 7\n",
+    "assert Solution().candy([1,2,3,3,1]) == 9\n",
+    "assert Solution().candy([1,2,3,3,1,0]) == 12 \n",
+    "assert Solution().candy([2,2,3,3,1,0]) == 10\n",
+    "assert Solution().candy([2,2,0,3,1,0]) == 10\n",
+    "assert Solution().candy([1,2,0,2,0,0,1,2,2,3,4,0,5]) == 22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
