--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "[1, 2, 3, 4, 5, 6, None, None, None, 7, 8, None, None, None, None, None, None]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,11 +771,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 7. \n",
+    "Date: 12th Feb 2024<br>\n",
+    "Hard Leetcode: n-queens<br>\n",
+    "Solution: https://leetcode.com/problems/n-queens/submissions/1173381198"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['.Q..', '...Q', 'Q...', '..Q.'], ['..Q.', 'Q...', '...Q', '.Q..']]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def solveNQueens(self, N: int) -> List[List[str]]:\n",
+    "        board = [[\".\" for _ in range(N)] for __ in range(N)]\n",
+    "\n",
+    "        def canPlace(i_: int, j_: int) -> bool:\n",
+    "            \"\"\"\n",
+    "            This function can be optimized. Instead of iterating through to all the cells - \n",
+    "            Simply check for each placed queen if the current position is a conflict. Gonna try later :)\n",
+    "\n",
+    "            This would make the checks for each queen constant time.\n",
+    "            \"\"\"\n",
+    "            for dir_ in [(-1, 0), (1, 0), (0, -1), (0, 1), (1, 1), (-1, -1), (-1, 1), (1, -1)]:\n",
+    "                row, col = i_, j_\n",
+    "                while 0 <= row < N and 0 <= col < N:\n",
+    "                    if board[row][col] == 'Q':\n",
+    "                        return False\n",
+    "                    row, col = row + dir_[0], col + dir_[1]\n",
+    "            return True\n",
+    "\n",
+    "        result = []\n",
+    "        def backtrack(i: int = 0) -> List[List[str]]:\n",
+    "            if i == N:\n",
+    "                result.append([\"\".join(row_) for row_ in board])\n",
+    "                return \n",
+    "            for j in range(N):\n",
+    "                if canPlace(i, j):\n",
+    "                    board[i][j] = 'Q'\n",
+    "                    backtrack(i + 1)\n",
+    "                    board[i][j] = '.'\n",
+    "\n",
+    "        backtrack()\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().solveNQueens(4)"
+   ]
   },
   {
    "cell_type": "code",
