--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![12%](https://progress-bar.dev/12?title=progress&width=100)\n",
+    "![16%](https://progress-bar.dev/16?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -782,20 +782,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['.Q..', '...Q', 'Q...', '..Q.'], ['..Q.', 'Q...', '...Q', '.Q..']]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def solveNQueens(self, N: int) -> List[List[str]]:\n",
@@ -831,8 +820,60 @@
     "        return result\n",
     "\n",
     "# Testing the solution\n",
-    "Solution().solveNQueens(4)"
+    "assert Solution().solveNQueens(4) == [['.Q..', '...Q', 'Q...', '..Q.'], ['..Q.', 'Q...', '...Q', '.Q..']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. \n",
+    "Date: 13th Feb 2024<br>\n",
+    "Hard Leetcode: dungeon-game<br>\n",
+    "Solution: https://leetcode.com/problems/dungeon-game/submissions/1173675729"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def calculateMinimumHP(self, dungeon: List[List[int]]) -> int:\n",
+    "        \"\"\"\n",
+    "        If curr is positive or 0, minHealth is 1\n",
+    "        if curr is negative, 1 - curr\n",
+    "\n",
+    "        Keep track of minHealth required to start at that cell and also accumulated health\n",
+    "        \"\"\"\n",
+    "\n",
+    "        M = len(dungeon)\n",
+    "        N = len(dungeon[0])\n",
+    "\n",
+    "        for i in range(M - 1, -1, -1):\n",
+    "            for j in range(N - 1, -1, -1):\n",
+    "                curr = 1 - dungeon[i][j]\n",
+    "                safestChoicePath = min(dungeon[i + 1][j] if i + 1 < M else math.inf, dungeon[i][j + 1] if j + 1 < N else math.inf)\n",
+    "                if safestChoicePath == math.inf:\n",
+    "                    safestChoicePath = 1\n",
+    "                dungeon[i][j] = max(1, curr + safestChoicePath - 1)\n",
+    "\n",
+    "        return dungeon[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().calculateMinimumHP([[-2,-3,3],[-5,-10,1],[10,30,-5]]) == 7\n",
+    "assert Solution().calculateMinimumHP([[2,3,3],[-5,10,1],[10,30,5]]) == 1\n",
+    "assert Solution().calculateMinimumHP([[1,2,3],[-4,-5,6],[-7,-8,-9]]) == 1\n",
+    "assert Solution().calculateMinimumHP([[0]]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
