50HL30D - Day 6 - Part II

--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,11 +869,84 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 9. \n",
+    "Date: 13th Feb 2024<br>\n",
+    "Hard Leetcode: number-of-digit-one<br>\n",
+    "Solution: https://leetcode.com/problems/number-of-digit-one/submissions/1174159411"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 8252.90it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def countDigitOne_(self, n: int) -> int:\n",
+    "        i, prev, curr = 0, 0, 0\n",
+    "        while i <= n:\n",
+    "            curr = prev + str(i).count('1')\n",
+    "            prev = curr\n",
+    "            i += 1\n",
+    "        return curr\n",
+    "\n",
+    "    def countDigitOne(self, n: int) -> int:\n",
+    "        \"\"\"\n",
+    "        How many times does 1 occur for each digit position?\n",
+    "\n",
+    "        For eg: \n",
+    "                Say n = 999 (100, 10, 1)\n",
+    "                1 in 100s position: 100\n",
+    "                1 in 10s position: 100\n",
+    "                1 in 1s position: 100\n",
+    "\n",
+    "        For max n: n_digits * (10 ^ (n_digits - 1))\n",
+    "\n",
+    "        General Logic: \n",
+    "        Iterate through digits (right to left, even left to right should work)\n",
+    "            If curr == 0: result += left * factor\n",
+    "            Elif curr == 1: result += (left * factor) + (right + 1)\n",
+    "            Else: result += (left + 1) * factor\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "        result, factor = 0, 1\n",
+    "        s = str(n)\n",
+    "        N = len(s)\n",
+    "\n",
+    "        for i in range(-1, -N -1, -1):\n",
+    "\n",
+    "            curr = int(s[i])\n",
+    "            left = int(s[:i]) if i > -N else -1 if s[0] == 1 else 0\n",
+    "            right = int(s[i+1:]) if i < -1 else -1 if s[-1] == 0 else 0\n",
+    "\n",
+    "            if curr == 0:\n",
+    "                result += left * factor\n",
+    "            elif curr == 1:\n",
+    "                result += (left * factor) + right + 1\n",
+    "            else:\n",
+    "                result += (left + 1) * factor\n",
+    "\n",
+    "            factor *= 10\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in tqdm.tqdm(range(1001)):\n",
+    "    assert Solution().countDigitOne_(_) == Solution().countDigitOne(_), f\"Failed for {_}\""
+   ]
   },
   {
    "cell_type": "code",
