--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 50HL30D\n",
-    "![16%](https://progress-bar.dev/16?title=progress&width=100)\n",
+    "![20%](https://progress-bar.dev/20?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 50 Hard Leetcode problems in 30 days.<br>\n",
@@ -880,14 +880,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 8252.90it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 4683.58it/s]\n"
      ]
     }
    ],
@@ -949,6 +949,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10. \n",
+    "Date: 14th Feb 2024<br>\n",
+    "Hard Leetcode: my-calendar-iii<br>\n",
+    "Solution: https://leetcode.com/problems/my-calendar-iii/submissions/1174676799/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyCalendarThree:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.calendar = []\n",
+    "        self.K = -math.inf\n",
+    "\n",
+    "    def book_(self, startTime: int, endTime: int) -> int:\n",
+    "        \"Will timeout\"\n",
+    "        K = -math.inf\n",
+    "        for ct in range(startTime, endTime + 1):\n",
+    "            curr = 1\n",
+    "            for es, ee in self.calendar:\n",
+    "                if es < ct < ee or es < ct < ee:\n",
+    "                    curr += 1\n",
+    "            K = max(K, curr)\n",
+    "\n",
+    "        self.calendar.append([startTime, endTime])\n",
+    "        self.K = max(self.K, K)\n",
+    "        return self.K\n",
+    "\n",
+    "    def book(self, startTime: int, endTime: int) -> int:\n",
+    "        \"Optimized a bit by using dictionaries to remove duplicates. Time complexity in worst case is still 2^N\"\n",
+    "        updated = dict()\n",
+    "        for es, ee, ec in self.calendar:\n",
+    "            lt, gt = sorted([[startTime, endTime], [es, ee]])\n",
+    "            if lt[0] <= gt[0] < lt[1]:\n",
+    "                overlap = (max(startTime, es), min(endTime, ee))\n",
+    "                updated[overlap] = max(updated.get(overlap, 0), ec + 1)\n",
+    "            updated[(es, ee)] = max(updated.get((es, ee), 0), ec)\n",
+    "        updated[(startTime, endTime)] = max(updated.get((startTime, endTime), 0), 1)\n",
+    "        self.calendar = list(map(lambda x: (x[0][0], x[0][1], x[1]), updated.items()))\n",
+    "        return max(self.calendar, key=lambda x: x[2])[2]\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution = MyCalendarThree()\n",
+    "temp = (\n",
+    "    [[10, 20], [50, 60], [10, 40], [5, 15], [5, 10], [25, 55], [0, 100]],\n",
+    "    [1, 1, 2, 3, 3, 3, 4]\n",
+    ")\n",
+    "for i in range(len(temp[0])):\n",
+    "    assert Solution.book(*temp[0][i]) == temp[1][i]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -968,18 +1027,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
   }
  },
  "nbformat": 4,
