--- a/50HL30D.ipynb
+++ b/50HL30D.ipynb
@@ -887,7 +887,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 4683.58it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1001/1001 [00:00<00:00, 7152.42it/s]\n"
      ]
     }
    ],
@@ -984,7 +984,7 @@
     "        self.K = max(self.K, K)\n",
     "        return self.K\n",
     "\n",
-    "    def book(self, startTime: int, endTime: int) -> int:\n",
+    "    def book_(self, startTime: int, endTime: int) -> int:\n",
     "        \"Optimized a bit by using dictionaries to remove duplicates. Time complexity in worst case is still 2^N\"\n",
     "        updated = dict()\n",
     "        for es, ee, ec in self.calendar:\n",
@@ -996,6 +996,29 @@
     "        updated[(startTime, endTime)] = max(updated.get((startTime, endTime), 0), 1)\n",
     "        self.calendar = list(map(lambda x: (x[0][0], x[0][1], x[1]), updated.items()))\n",
     "        return max(self.calendar, key=lambda x: x[2])[2]\n",
+    "    \n",
+    "    def book(self, startTime: int, endTime: int) -> int:\n",
+    "        \"https://www.youtube.com/watch?v=gbJKlcokAIo\"\n",
+    "\n",
+    "        start = bisect.bisect(self.calendar, (startTime, 1))\n",
+    "        if start < len(self.calendar) and self.calendar[start][0] == startTime:\n",
+    "            self.calendar[start] = (startTime, self.calendar[start][1] + 1)\n",
+    "        else:\n",
+    "            bisect.insort(self.calendar, (startTime, 1))\n",
+    "\n",
+    "        end = bisect.bisect(self.calendar, (endTime, 1))\n",
+    "        if end < len(self.calendar) and self.calendar[end][0] == endTime:\n",
+    "            self.calendar[end] = (endTime, self.calendar[end][1] - 1)\n",
+    "        else:\n",
+    "            bisect.insort(self.calendar, (endTime, -1))\n",
+    "\n",
+    "        K = -math.inf\n",
+    "        curr = 0\n",
+    "        for _, c in self.calendar:\n",
+    "            curr += c\n",
+    "            K = max(K, curr)\n",
+    "\n",
+    "        return K\n",
     "\n",
     "# Testing the solution\n",
     "Solution = MyCalendarThree()\n",
@@ -1005,6 +1028,65 @@
     ")\n",
     "for i in range(len(temp[0])):\n",
     "    assert Solution.book(*temp[0][i]) == temp[1][i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11. \n",
+    "Date: 14th Feb 2024<br>\n",
+    "Hard Leetcode: sliding-window-maximum<br>\n",
+    "Solution: https://leetcode.com/problems/sliding-window-maximum/submissions/1175614381"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxSlidingWindow_(self, nums: List[int], k: int) -> List[int]:\n",
+    "        \"Times out\"\n",
+    "        N = len(nums)\n",
+    "        if k == 1:\n",
+    "            return nums\n",
+    "        elif N == k:\n",
+    "            return [max(nums)]\n",
+    "        else:\n",
+    "            stack = sorted(((n, i) for i, n in enumerate(nums)))\n",
+    "            result = [None] * N\n",
+    "            for n, start in stack:\n",
+    "                result[start: start + k] = [n] * k\n",
+    "            result = result[k - 1: 1 - k]\n",
+    "            return result\n",
+    "\n",
+    "    def maxSlidingWindow(self, nums: List[int], k: int) -> List[int]:\n",
+    "        \"\"\"\n",
+    "        https://www.youtube.com/watch?v=CZQGRp93K4k\n",
+    "        \"\"\"\n",
+    "        N = len(nums)\n",
+    "        deq = collections.deque()\n",
+    "        result = []\n",
+    "        for i in range(N):\n",
+    "            while deq and nums[deq[-1]] < nums[i]:\n",
+    "                deq.pop()\n",
+    "            deq.append(i)\n",
+    "            while deq[0] <= i - k:\n",
+    "                deq.popleft()\n",
+    "            if i >= k - 1:\n",
+    "                result.append(nums[deq[0]])\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().maxSlidingWindow([9, 8, 7, 6, 5], 5) == [9]\n",
+    "assert Solution().maxSlidingWindow([9, 8, 7, 6, 5], 1) == [9, 8, 7, 6, 5]\n",
+    "assert Solution().maxSlidingWindow([9, 8, 7, 6, 5, 4, 3, 2, 1], 3) == [9, 8, 7, 6, 5, 4, 3]\n",
+    "assert Solution().maxSlidingWindow([1, 3, -1, -3, 5, 3, 6, 7], 3) == [3, 3, 5, 5, 6, 7]\n",
+    "assert Solution().maxSlidingWindow([1, 3, -1, 3, 5, 9, 6, 7, 1], 3) == [3, 3, 5, 9, 9, 9, 7]\n",
+    "assert Solution().maxSlidingWindow([1, 3, -1, 3, 5, 9, 6, 7], 5) == [5, 9, 9, 9]\n",
+    "assert Solution().maxSlidingWindow([-7, -8, 7, 5, 7, 1, 6, 0],  4) == [7, 7, 7, 7, 7]"
    ]
   },
   {
@@ -1027,6 +1109,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
